--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,23 +24,42 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Copy files to server
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          port: 22
-          source: 'dist/*'
-          target: '/var/www/zvon/dist/'
+      - name: Configure SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SERVER_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
 
-      - name: Reload Nginx
-        uses: appleboy/ssh-action@v0.1.8
+      - name: Create .env files
+        uses: thaind0/envfile@v1
         with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          port: 22
-          script: |
+          secrets: ${{ toJSON(secrets) }}
+          file: secrets.env
+          exclude: SERVER_IP, SERVER_USER, SERVER_SSH_KEY, DEV_*, AI_*
+      - name: Create vars.env
+        uses: thaind0/envfile@v1
+        with:
+          secrets: ${{ toJSON(vars) }}
+          file: vars.env
+          exclude: DEV_*, AI_*
+
+      - name: Clear old dist and copy new build to server
+        run: |
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "
+            rm -rf /var/www/zvon/dist/*
+          "
+          rsync -avz -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" dist/ ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/var/www/zvon/dist/
+          rsync -avz -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" vars.env secrets.env ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/var/www/zvon/
+
+      - name: Deploy on server
+        run: |
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "
+            set -e
+            cd /var/www/zvon
+            cat ./vars.env > ./.env
+            cat ./secrets.env >> ./.env
+            sed -i 's/MASTER_//g' ./.env
             sudo nginx -t
             sudo systemctl reload nginx
+          "
