--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,20 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Получаем код репозитория
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build project
-        run: npm run build
-
+      # 2. Настройка SSH ключа для доступа к серверу
       - name: Configure SSH
         run: |
           mkdir -p ~/.ssh
@@ -31,12 +22,14 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
 
+      # 3. Создание .env файлов из секретов и vars (опционально)
       - name: Create .env files
         uses: thaind0/envfile@v1
         with:
           secrets: ${{ toJSON(secrets) }}
           file: secrets.env
-          exclude: SERVER_IP, SERVER_USER, SERVER_SSH_KEY, DEV_*, AI_*
+          exclude: SERVER_*, DEV_*, AI_*
+
       - name: Create vars.env
         uses: thaind0/envfile@v1
         with:
@@ -44,22 +37,23 @@ jobs:
           file: vars.env
           exclude: DEV_*, AI_*
 
-      - name: Clear old dist and copy new build to server
+      # 4. Копируем репозиторий и env на сервер
+      - name: Sync code to server
         run: |
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "
-            rm -rf /var/www/zvon/dist/*
-          "
-          rsync -avz -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" dist/ ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/var/www/zvon/dist/
-          rsync -avz -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" vars.env secrets.env ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/var/www/zvon/
+          rsync -avz -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" \
+          ./ root@${{ secrets.SERVER_IP }}:/var/www/zvon/
+          rsync -avz -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" \
+          vars.env secrets.env root@${{ secrets.SERVER_IP }}:/var/www/zvon/
 
+      # 5. Деплой через docker-compose на сервере
       - name: Deploy on server
         run: |
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "
-            set -e
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no root@${{ secrets.SERVER_IP }} "
             cd /var/www/zvon
             cat ./vars.env > ./.env
             cat ./secrets.env >> ./.env
             sed -i 's/MASTER_//g' ./.env
-            sudo nginx -t
-            sudo systemctl reload nginx
+            docker-compose down
+            docker-compose up -d --build
+            docker system prune -af
           "
