--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,8 @@ jobs:
             cat ./vars.env > ./.env
             cat ./secrets.env >> ./.env
             sed -i 's/MASTER_//g' ./.env
-            rm -rf dist
+            export COMPOSE_PROJECT_NAME=zvon
+            export NGINX_PORT=80
             docker-compose down
             docker-compose up -d --build
             docker system prune -af
